fix tabs | fix on mobile

--- a/script/style.css
+++ b/script/style.css
@@ -213,7 +213,7 @@ body {
 .resumeFooter button {
     /* min-width: 10%; */
     margin-top: 1%;
-    color:bisque;
+    color:white;
     background-color: #333333;
     border-radius: 4px;
     margin-left: 3%;
@@ -223,7 +223,7 @@ body {
 
 .resumeFooter select {
     margin-left: 3%;
-    color: bisque;
+    color: white;
     background-color: #333333;
     border-radius: 4px;
     border: white solid 2px;
@@ -320,3 +320,15 @@ body {
 .display {
     min-width: ;
 } */
+
+.skills {
+    background-color: #333333;
+    border-radius: 12px;
+    border: #333333 solid 1px;
+    /* min-width: 70%; */
+    max-width: 70%;
+}
+
+.skills * {
+    color: white;
+}
